--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "@alpinejs/intersect": "^3.15.3"
+        "@alpinejs/intersect": "^3.15.3",
+        "alpinejs": "^3.15.3"
     }
 }
